--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -2,12 +2,12 @@
 % Packages
 
 
-\usepackage{arev}
+\usepackage{mathpazo}
 \usepackage[english]{babel}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{textcomp}
+
 \usepackage{biblatex} 
 \usepackage{geometry}
 \geometry{margin=1.5in}
