Updates from Overleaf

--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -10,7 +10,7 @@
 
 \usepackage{biblatex} 
 \usepackage{geometry}
-\geometry{margin=1.5in}
+\geometry{margin=1.3in}
 \usepackage{amsmath,amsfonts,amssymb,amsthm,mathrsfs}
 \usepackage{extarrows}
 \usepackage{csquotes}
@@ -22,6 +22,7 @@
 \newtheorem{coro}{Corollary}
 \newtheorem{lemm}{Lemma}
 \newtheorem{example}{Example}
+\newtheorem{fac}{Fact}
 \newtheorem{rema}{Remark}
 \newcommand{\ca}{$\mathcal{A}$ }
 \newcommand{\cb}{$\mathcal{B}$ }
