--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -15,6 +15,7 @@
 \usepackage{extarrows}
 \usepackage{csquotes}
 \usepackage{pgf,tikz,tikz-cd}
+\usetikzlibrary{babel}
 \usepackage{hyperref}
 \newtheorem{theo}{Theorem}
 \newtheorem{prop}{Proposition}
