--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -29,6 +29,7 @@
 \newcommand{\cb}{$\mathcal{B}$ }
 \newcommand{\cc}{$\mathcal{C}$ }
 \newcommand{\cd}{$\mathcal{D}$ }
+\renewcommand{\bf}[1]{\textbf{#1}}
 
 % Title and Author
 \title{PhD Studies}
